Add some styles and layouts

--- a/resources/views/front/chat/show.html
+++ b/resources/views/front/chat/show.html
@@ -24,7 +24,7 @@
                    border: 1px solid rgba( 255, 255, 255, 0.18 );
                    border-radius: 5px;
                    color: white;" class="d-flex justify-content-between">
-                <a href="index.html">
+                <a href="index.blade.php">
                     <img src="../icons/back-2.svg" alt="back" width="30" height="35" class="ms-1">
                 </a>
                 <h5 class="my-auto" style="color: white;">
@@ -239,7 +239,7 @@
 </div>
     <div class="collapse fixed-bottom mx-auto bottom-menu-block" id="navbarToggleExternalContent">
         <div class="pt-3 pb-3 d-flex align-items-center bottom-menu-block-child">
-            <a class="nav-link" href="../chat/index.html"><h5>Чат заявок</h5></a>
+            <a class="nav-link" href="index.blade.php"><h5>Чат заявок</h5></a>
             <a class="nav-link" href="../application/index.html"><h5>Заявки</h5></a>
             <a class="nav-link" href="../repair/index.html"><h5>Ремонт</h5></a>
             <a class="nav-link" href="../act/index.html"><h5>Акты</h5></a>
