--- a/resources/views/front/renter_application/create.html
+++ b/resources/views/front/renter_application/create.html
@@ -112,7 +112,7 @@
         </div>
         <div class="collapse fixed-bottom mx-auto bottom-menu-block" id="navbarToggleExternalContent">
             <div class="pt-3 pb-3 d-flex align-items-center bottom-menu-block-child">
-                <a class="nav-link" href="../chat/index.html"><h5>Чат заявок</h5></a>
+                <a class="nav-link" href="../chat/index.blade.php"><h5>Чат заявок</h5></a>
                 <a class="nav-link" href="../application/index.html"><h5>Заявки</h5></a>
                 <a class="nav-link" href="../repair/index.html"><h5>Ремонт</h5></a>
                 <a class="nav-link" href="../act/index.html"><h5>Акты</h5></a>
