Add some styles and layouts

--- a/resources/views/front/act/index.html
+++ b/resources/views/front/act/index.html
@@ -144,7 +144,7 @@
         <div class="pt-3 pb-3 d-flex align-items-center bottom-menu-block-child">
             <a class="nav-link" href="../chat/index.blade.php"><h5>Чат заявок</h5></a>
             <a class="nav-link" href="../application/index.blade.php"><h5>Заявки</h5></a>
-            <a class="nav-link" href="../repair/index.html"><h5>Ремонт</h5></a>
+            <a class="nav-link" href="../repair/index.blade.php"><h5>Ремонт</h5></a>
             <a class="nav-link" href="../act/index.html"><h5>Акты</h5></a>
             <a class="nav-link" href="../admin/index.html"><h5>Админ панель</h5></a>
         </div>
