--- a/resources/views/front/components/forms/applications/promotion.html
+++ b/resources/views/front/components/forms/applications/promotion.html
@@ -28,7 +28,7 @@
             <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
                 <div class="col mb-3">
                     <label for="trk_id" class="form-label" style="color: white;">Торговый комплекс</label>
-                    <select id="trk_id" name="trk_id" class="form-select" style="background: rgba( 255, 255, 255, 0.5 );">
+                    <select id="trk_id" name="trk_id" class="form-select form-select-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                         <option value="1">Академ Парк</option>
                         <option value="2">Гудзон</option>
                         <option value="3">Европолис (м.Лесная)</option>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col mb-3">
                     <label for="renter_work_type_id" class="form-label" style="color: white;">Виды работ</label>
-                    <select autofocus id="renter_work_type_id" name="renter_work_type_id" class="form-select" style="background: rgba( 255, 255, 255, 0.5 );">
+                    <select autofocus id="renter_work_type_id" name="renter_work_type_id" class="form-select form-select-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                         <option value="11" style="color: yellowgreen">Промоакция</option>
                     </select>
                 </div>
@@ -47,36 +47,36 @@
                 <div class="col mb-3">
                     <label class="mb-2" for="work_start_time" style="color: white;">Начало работ:</label>
                     <br>
-                    <input required type="datetime-local" id="work_start_time" name="date" class="form-control" style="background: rgba( 255, 255, 255, 0.5 );">
+                    <input required type="datetime-local" id="work_start_time" name="date" class="form-control form-control-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                 </div>
                 <div class="col">
                     <label class="mb-2" for="work_finish_time" style="color: white;">Окончание работ:</label>
                     <br>
-                    <input required type="datetime-local" id="work_finish_time" name="work_finish_time" class="form-control" style="background: rgba( 255, 255, 255, 0.5 );">
+                    <input required type="datetime-local" id="work_finish_time" name="work_finish_time" class="form-control form-control-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                 </div>
             </div>
             <div class="row col-12 mx-auto row-cols-1">
                 <div class="col mt-3">
                     <label for="comment" class="form-label" style="color: white;">Описание работ</label>
-                    <textarea required class="form-control" id="comment" name="comment" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
+                    <textarea required class="form-control form-control-sm" id="comment" name="comment" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
                 </div>
             </div>
             <div class="row col-12 mx-auto row-cols-1">
                 <div class="col mt-3">
                     <label for="persons_list" class="form-label" style="color: white;">Список лиц</label>
-                    <textarea required class="form-control" id="persons_list" placeholder="ФИО, ФИО, ФИО" name="persons_list" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
+                    <textarea required class="form-control form-control-sm" id="persons_list" placeholder="ФИО, ФИО, ФИО" name="persons_list" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
                 </div>
             </div>
             <div class="row col-12 mx-auto row-cols-1">
                 <div class="col mt-3">
                     <label for="responsible_person" class="form-label" style="color: white;">Ответственный</label>
-                    <textarea required class="form-control" placeholder="ФИО, тел." id="responsible_person" name="responsible_person" rows="1" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
+                    <textarea required class="form-control form-control-sm" placeholder="ФИО, тел." id="responsible_person" name="responsible_person" rows="1" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
                 </div>
             </div>
             <div class="row col-12 mx-auto row-cols-1">
                 <div class="col mt-3">
                     <label for="equipment_list" class="form-label" style="color: white;">Список оборудования</label>
-                    <textarea class="form-control" id="equipment_list" name="equipment_list" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
+                    <textarea class="form-control form-control-sm" id="equipment_list" name="equipment_list" rows="2" style="background: rgba( 255, 255, 255, 0.5 );"></textarea>
                 </div>
             </div>
             <div class="row col-12 mx-auto row-cols-1">
@@ -91,10 +91,10 @@
             </div>
             <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
                 <div class="col mt-4">
-                    <button class="btn btn-danger col-12" type="submit">Сохранить</button>
+                    <button class=" btn btn-sm  btn-danger col-12" type="submit">Сохранить</button>
                 </div>
                 <div class="col mt-4">
-                    <button onClick="history.back()" class="btn btn-success col-12" type="button">Назад</button>
+                    <button onClick="history.back()" class=" btn btn-sm  btn-success col-12" type="button">Назад</button>
                 </div>
             </div>
         </form>
@@ -111,15 +111,15 @@
 </main>
 <footer>
     <nav class="navbar fixed-bottom justify-content-around">
-        <a href="../../../index.blade.php" class="btn">
+        <a href="../../../index.blade.php" class=" btn btn-sm">
             <img src="../../../icons/home.svg" alt="Profile icon" width="30" height="30">
         </a>
-        <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse"
+        <button class="navbar-toggler  btn btn-sm" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <button onClick="history.back()" class="btn">
+        <button onClick="history.back()" class=" btn btn-sm">
             <img src="../../../icons/back.svg" alt="Profile icon" width="30" height="30">
         </button>
     </nav>
