--- a/resources/views/front/pass_reset.html
+++ b/resources/views/front/pass_reset.html
@@ -26,12 +26,12 @@
          <div class="row col-12 mx-auto row-cols-1">
              <div class="col mt-2">
                  <label for="email" class="form-label" style="color: white;">Электронная почта</label>
-                 <input autofocus class="form-control" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input autofocus class="form-control form-control-sm" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1">
              <div class="col mt-3">
-                 <button class="btn btn-warning col-12" type="submit">Отправить ссылку</button>
+                 <button class=" btn btn-sm  btn-warning col-12" type="submit">Отправить ссылку</button>
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1">
