--- a/resources/views/front/registration.html
+++ b/resources/views/front/registration.html
@@ -27,17 +27,17 @@
          <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
              <div class="col mt-2">
                  <label for="email" class="form-label" style="color: white;">Электронная почта</label>
-                 <input autofocus class="form-control" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input autofocus class="form-control form-control-sm" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
              <div class="col mt-2">
                  <label for="surname" class="form-label" style="color: white;">Фамилия и инициалы</label>
-                 <input class="form-control" type="text" id="surname" name="surname" required placeholder="Иванов И.И." style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input class="form-control form-control-sm" type="text" id="surname" name="surname" required placeholder="Иванов И.И." style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
              <div class="col mt-2">
                  <label for="system_id" class="form-label" style="color: white;">Подразделение</label>
-                 <select id="system_id" name="system_id" class="form-select" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <select id="system_id" name="system_id" class="form-select form-select-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                      <option value="1">Служба эксплуатации</option>
                      <option value="2">Администрация</option>
                      <option value="6">Арендатор</option>
@@ -47,7 +47,7 @@
              </div>
              <div class="col mt-2">
                  <label for="trk_id" class="form-label" style="color: white;">Торговый комплекс</label>
-                 <select id="trk_id" name="trk_id" class="form-select" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <select id="trk_id" name="trk_id" class="form-select form-select-sm" style="background: rgba( 255, 255, 255, 0.5 );">
                      <option value="1">Академ Парк</option>
                      <option value="2">Гудзон</option>
                      <option value="3">Европолис (м.Лесная)</option>
@@ -59,16 +59,16 @@
          <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
              <div class="col mt-2">
                  <label for="password" class="form-label" style="color: white;">Пароль</label>
-                 <input class="form-control" type="password" id="password" name="password" required style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input class="form-control form-control-sm" type="password" id="password" name="password" required style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
              <div class="col mt-2">
                  <label for="password_repeat" class="form-label" style="color: white;">Повторите пароль</label>
-                 <input class="form-control" type="password" id="password_repeat" required name="password_repeat" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input class="form-control form-control-sm" type="password" id="password_repeat" required name="password_repeat" style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1">
              <div class="col mt-3">
-                 <button class="btn btn-danger col-12" type="submit">Сохранить</button>
+                 <button class=" btn btn-sm  btn-danger col-12" type="submit">Сохранить</button>
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
