--- a/resources/views/front/login.html
+++ b/resources/views/front/login.html
@@ -27,16 +27,16 @@
          <div class="row col-12 mx-auto row-cols-1 row-cols-md-2 row-cols-xxl-2">
              <div class="col mt-2">
                  <label for="email" class="form-label" style="color: white;">Электронная почта</label>
-                 <input autofocus class="form-control" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input autofocus class="form-control form-control-sm" type="email" id="email" name="email" required placeholder="i.ivanov@email.com" style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
              <div class="col mt-2">
                  <label for="password" class="form-label" style="color: white;">Пароль</label>
-                 <input class="form-control" type="password" id="password" name="password" required style="background: rgba( 255, 255, 255, 0.5 );">
+                 <input class="form-control form-control-sm" type="password" id="password" name="password" required style="background: rgba( 255, 255, 255, 0.5 );">
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1">
              <div class="col mt-3">
-                 <button class="btn btn-success col-12" type="submit">Войти</button>
+                 <button class=" btn btn-sm  btn-success col-12" type="submit">Войти</button>
              </div>
          </div>
          <div class="row col-12 mx-auto row-cols-1">
